fix: error field favorite in restaurantrsp